--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 rand = "0.6.4"
 num-traits = "0.2.6"
+ndarray = "0.12.1"
 
 [dependencies.num-bigint]
 version = "0.2"
