--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2018"
 rand = "0.6.4"
 num-traits = "0.2.6"
 ndarray = "0.12.1"
+bigdecimal = "0.0.14"
+num-integer = "0.1"
 
 [dependencies.num-bigint]
 version = "0.2"
